test/manual/k8s/webhook.yml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: scope.default.appscope.io
  labels:
    app: scope
webhooks:
  - name: scope.default.appscope.io
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    matchPolicy: Equivalent
    failurePolicy: Fail
    clientConfig:
      service:
        name: scope
        namespace: default
        path: "/mutate"
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "*"
    namespaceSelector:
      matchLabels:
        scope: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scope
  namespace: default
  labels:
    app: scope
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scope
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: scope
    spec:
      serviceAccountName: scope-cert-sa
      containers:
        - name: scope
          image: cribl/scope:dev
          command: ["/bin/bash"]
          args:
          - "-c"
          - "/usr/local/bin/scope k8s --server --metricdest file:///scope/metrics/12345/metrics.json --metricformat prometheus --eventdest file:///dev/null || sleep 1000"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: certs
              mountPath: /etc/certs
              readOnly: true
          ports:
            - containerPort: 4443
              protocol: TCP
      volumes:
        - name: certs
          secret:
            secretName: scope-secret
---
apiVersion: v1
kind: Service
metadata:
  name: scope
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: 4443-tcp
      protocol: TCP
      port: 443
      targetPort: 4443
  selector:
    app: scope
